--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -28,7 +28,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.ugmedicalbuddy.orange.QuoteViewerActivity"
+            android:name="com.ugmedicalbuddy.orange.QuoteListActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.ugmedicalbuddy.orange.TitlesListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -52,25 +61,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-         <activity
-            android:name="com.ugmedicalbuddy.orange.HelpActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="com.ugmedicalbuddy.orange.MapActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        
+                
+               
     </application>
 
 </manifest>
